--- a/_pages/10-pub17.part.2.5.md
+++ b/_pages/10-pub17.part.2.5.md
@@ -11,9 +11,9 @@ Publication 17, Part 2.5: Wages, Salaries, and Earnings
 
 1. Wages, Salaries, and Other Earnings
 
-   - Deferred Compensation Contribution Limits: Increased to \$22,500 ($30,000 if age 50 or older) for 401(k), 403(b), and most 457 plans in 2023.
-   - Health FSAs: Dollar limitation increased to $3,050 for 2023.
-   - Types of Compensation: Discussion on bonuses, awards, sickness, and injury benefits.
+   - Deferred compensation (401(k), 403(b), Thrift Savings, and most 457) plans limits are \$22,500, or \$30,000 if you're >= 50 years old.
+   - Health FSAs (limit = **$3,050**) 
+   - Types of Compensation: bonuses, awards, sickness, and injury benefits
    - Form W-2: Reporting requirements for various earnings.
    - Special Rules for Household Workers: Includes details on who is considered a household worker and related tax implications.
    - Miscellaneous Compensation: Covers advance commissions, reimbursements, back pay awards, and other miscellaneous payments.
@@ -49,7 +49,7 @@ Publication 17, Part 2.5: Wages, Salaries, and Earnings
    - Taxable and Nontaxable Interest: Definitions and examples.
    - Reporting Interest Income: Guidelines for when and how to report interest income.
 
-#### Key IRS References:
+#### Key IRS References
 
 - Pub. 969: Health Savings Accounts and Other Tax-Favored Health Plans.
 - Pub. 502: Medical and Dental Expenses.
@@ -64,7 +64,7 @@ Publication 17, Part 2.5: Wages, Salaries, and Earnings
 #### Essential Questions and Answers
 
 1. What is the contribution limit for 401(k) plans in 2023?
-   - The limit is \$22,500, or $30,000 if you are age 50 or older.
+   - The limit is \$22,500, or \$30,000 if you are age 50 or older.
 
 2. How are health FSAs treated for tax purposes in 2023?
    - Contributions to health FSAs are limited to $3,050 and are not included in your taxable income.
