--- a/_pages/10-pub17.part.2.5.md
+++ b/_pages/10-pub17.part.2.5.md
@@ -11,8 +11,8 @@ Publication 17, Part 2.5: Wages, Salaries, and Earnings
 
 1. Wages, Salaries, and Other Earnings
 
-   - Deferred compensation (401(k), 403(b), Thrift Savings, and most 457) plans limits are &#22,500, or $30,000 if you're >= 50 years old.
-   - Health FSAs (limit = **$3,050**) 
+   - Deferred compensation (401(k), 403(b), Thrift Savings, and most 457) plans limits are \&22,500, or \$30,000 if you're >= 50 years old.
+   - Health FSAs **(limit = $3,050)**
    - Types of Compensation: bonuses, awards, sickness, and injury benefits
    - Form W-2: Reporting requirements for various earnings.
    - Special Rules for Household Workers: Includes details on who is considered a household worker and related tax implications.
