--- a/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
+++ b/_pages/3-pub17.part1-4.tax.wholding.est.tax.md
@@ -4,27 +4,27 @@ date: 2024-08-24
 layout: post
 ---
 
-> w/h = with holding
+> W/H = Withholding
 {: .block-tip }
 
-This section discusses income tax w/h on:
+This section discusses income tax W/H on:
 
 1. Salaries & wages,
-1. Tips,
-1. Taxable fringe benefits,
-1. Sick pay,
-1. Pensions & annuities,
-1. Gambling winnings,
-1. Unemployment compensation, &
-1. Certain federal payments.
+2. Tips,
+3. Taxable fringe benefits,
+4. Sick pay,
+5. Pensions & annuities,
+6. Gambling winnings,
+7. Unemployment compensation, &
+8. Certain federal payments.
 
 - Methods to Pay Taxes
-    - w/h
+    - W/H
     - Estimated Tax
 
 **What's New for 2024**
 
-- Tax Law Changes for 2024 - See **Pub. 505**, Tax w/h & Estimated Tax
+- Tax Law Changes for 2024 - See **Pub. 505**, Tax W/H & Estimated Tax
 
 **Reminders**
 
@@ -32,9 +32,9 @@ This section discusses income tax w/h on:
      - PAY 90% of AGI, **OR**
      - 110% of est. tax
 
-## 1. Tax w/h
+## 1. Tax W/H
 
-- **Income Tax w/h on Types of Income** - See **Pub. 505**, Tax w/h & Estimated Tax
+- **Income Tax W/H on Types of Income** - See **Pub. 505**, Tax W/H & Estimated Tax
   - Salaries & Wages
   - Tips
   - Taxable Fringe Benefits
@@ -44,23 +44,23 @@ This section discusses income tax w/h on:
   - Unemployment Compensation
   - Certain Federal Payments
  
-- **Backup w/h - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to w/h int & dividends
-  - https://www.irs.gov/businesses/small-businesses-self-employed/backup-w/h
-  - Penalties for false information to avoid backup w/h. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
+- **Backup W/H - subject to 24% rate, IFF no TIN, TIN is not correct, IRS tells payer to W/H int & dividends
+  - https://www.irs.gov/businesses/small-businesses-self-employed/backup- W/H 
+  - Penalties for false information to avoid backup W/H. The civil penalty is \$500, criminal is fine up to \$1,000 or 1 year, or both.
 
 ## 2. Determining Amount of Tax Withheld Using Form W-4
 
 <script> function buttonFunc() { window.open("https://www.irs.gov/pub/irs-pdf/fw4.pdf?OWASP_CSRFTOKEN=5DVY-N1SM-ILPA-FK96-XIIS-IJRA-FFMU-ICIR"); } </script>
 
 - <button onclick="buttonFunc()">Open: IRS Forms</button> 
-- New Jobs, Pension Income, Checking & Changing Your w/h - NEEDS W4
+- New Jobs, Pension Income, Checking & Changing Your W/H - NEEDS W4
 - **OK** for multiple worksheets for couples
 - **OK** for deductions worksheet
 
 > **No Form W-4?** If you don't give your employer a completed W-4, your employer must withhold at the highest rate, as if you were single.
 {: .block-danger }
   
-## 3. Exemption From w/h
+## 3. Exemption From W/H
 
 - **Eligibility Criteria**
 - **Special Rules for Students, Elderly, & Blind**
@@ -68,7 +68,7 @@ This section discusses income tax w/h on:
 
 ## 4. Supplemental Wages
 
-- **Definition & w/h Rules**
+- **Definition & W/H Rules**
 - **Expense Allowances**
 
 ## 5. Penalties for False Information on Form W-4
@@ -76,44 +76,44 @@ This section discusses income tax w/h on:
 ## 6. Tips & Pub. 531, Reporting Tip Income
 
 - **Reporting Tips to Employers**
-- **w/h Rules**
+- **W/H Rules**
 - **Reference:** Pub. 531, Reporting Tip Income
 
 ## 7. Fringe Benefits
 
-- **Examples & w/h Rules**
-- **Reference:** Pub. 505, Tax w/h & Estimated Tax
+- **Examples & W/H Rules**
+- **Reference:** Pub. 505, Tax W/H & Estimated Tax
 
 ## 8. Sick Pay
 
-- **w/h Rules for Sick Pay**
+- **W/H Rules for Sick Pay**
 - **Special Cases Involving Third-Party Payers**
 - **Union Agreements & Sick Pay**
 
 ## 9. Pensions & Annuities
 
-- **w/h Rules**
-- **Reference:** Pub. 505, Tax w/h & Estimated Tax
+- **W/H Rules**
+- **Reference:** Pub. 505, Tax W/H & Estimated Tax
 
 ## 10. Gambling Winnings
 
-- **w/h Rules & Exceptions**
+- **W/H Rules & Exceptions**
 - **Form W-2G**
 
 ## 11. Unemployment Compensation
 
-- **w/h Options & Requirements**
+- **W/H Options & Requirements**
 - **Reference:** Form W-4V
 
 ## 12. Federal Payments
 
-- **Optional w/h on Federal Payments**
+- **Optional W/H on Federal Payments**
 - **Reference:** Pub. 225, Farmer’s Tax Guide
 
-## 13. Backup w/h
+## 13. Backup W/H
 
-- **Situations Where Backup w/h Applies**
-- **Reference:** IRS Backup w/h Information
+- **Situations Where Backup W/H Applies**
+- **Reference:** IRS Backup W/H Information
 
 ## 14. Estimated Tax for 2024
 
@@ -133,7 +133,7 @@ This section discusses income tax w/h on:
      - Pay by Check or Money Order
    - **Overpayment Credit**
 
-## 16. Credit for w/h & Estimated Tax for 2023
+## 16. Credit for W/H & Estimated Tax for 2023
 
 - **Claiming Credit on Tax Return**
 - **Special Rules for Multiple Employers, Corrected Forms, & Separate Returns**
@@ -150,7 +150,7 @@ This section discusses income tax w/h on:
  <script> function buttonFunc() { window.open("https://www.irs.gov/forms-instructions"); } </script>
 <button onclick="buttonFunc()">Link to Forms</button>
 
-- **Pub. 505** - Tax w/h & Estimated Tax
+- **Pub. 505** - Tax W/H & Estimated Tax
 - **Pub. 501** - Dependents, Standard Deduction, & Filing Information
 - **Pub. 531** - Reporting Tip Income
 - **Pub. 225** - Farmer’s Tax Guide
@@ -158,8 +158,8 @@ This section discusses income tax w/h on:
 - **Pub. 555** - Community Property
 - **Pub. 966** - EFTPS (Electronic Federal Tax Payment System)
 - **Pub. 5250** - Pay by Cash
-- **Form W-4** - Employee’s w/h Certificate
-- **Form W-4V** - Voluntary w/h Request
+- **Form W-4** - Employee’s W/H Certificate
+- **Form W-4V** - Voluntary W/H Request
 - **Form 1040-ES** - Estimated Tax for Individuals
 - **Form 8822** - Change of Address
 - **Form 2210** - Underpayment of Estimated Tax by Individuals, Estates, & Trusts
