--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -4,6 +4,8 @@ date: 2024-08-24, started
 layout: post
 ---
 
+function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
+
 > W/H = Withholding  
 > SS = Social security  
 > AGI = Adjusted gross income  
@@ -15,7 +17,7 @@ layout: post
 1. What records to keep and how long, How to amend filings 
 1. Pub. 17 closely follows Form 1040
 
-- **Not in this publication**
+- **Not in this publication**  <button onclick="button2()">Open: irs-pubs</button> 
 
 1. Pub. 334, Tax Guide for Small Business
 2. Pub. 225, Farmer's Tax Guide
@@ -27,14 +29,14 @@ layout: post
 
 - Child tax credit **-->** \$1,600 for each qualifying child  
 
----
+<br>
 
-<script> function button1() { window.open("/irs.ea/assets/pdfs/i8936.pdf"); } </script>
-1. Clean vehicle credit (New): Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f: <button onclick="button1()">See 8936</button>
+<script> function button10() { window.open("/irs.ea/assets/pdfs/i8936.pdf"); } </script>
+1. Clean vehicle credit (New): Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="button2()">Open: irs-pubs</button> 
 2. Previously owned clean vehicle credit: credit is available for previously owned clean vehicles, Use Form 8936
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
 
----
+<br>
 
 |Who must file|
 |:-:|
@@ -42,7 +44,7 @@ layout: post
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
 |![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
 
----
+<br>
 
 - Std Deductions for 2023:  
 
@@ -50,27 +52,30 @@ layout: post
 |-|-|-|
 |\$13,850|\$27,700|\$20,800|
 
----
+<br>
 
-- **Schedule 3-1040 Add'ns**
+- **Schedule 3-1040 Add'ns**  <button onclick="button2()">Open: irs-pubs</button> 
 - Line 5a **-->** Residential clean energy credit: Form 5695
 - Line 5b **-->** Energy efficient home improvement credit: Form 5695
 - Line 6m **-->** Credit for previously owned clean vehicles: Form 8936
 - Line 13c **-->** Elective payment election amount: Form 3800
 
----
+<br>
 
-- Credits for qualified sick and family leave wages: Use 1040 Schedule H & Schedule 3, line 13z
+- Credits for qualified sick and family leave wages: 
+  - Use 1040 Schedule H & Schedule 3, line 13z
 
 - Alternative motor vehicle credit **-->** Expired
 
-- Self-employed health insurance deduction: Use Form 7206, report on 1040 Schedule 1, line 17
+- Self-employed health insurance deduction:  <button onclick="button2()">Open: irs-pubs</button> 
+  - Use Form 7206, report on 1040 Schedule 1, line 17
 
 - 1X Charitable distribution: 2023 **-->** distribute < \$50K from IRA
 
-- Increase required minimum distribution age **-->** 72yr, Use Pub. 590–B
+- Increase required minimum distribution age **-->** 72yr  <button onclick="button2()">Open: irs-pubs</button> 
+  - Use Pub. 590–B
 
----
+<br>
 
 - IRA contribution limit increased to:
 
@@ -78,9 +83,9 @@ layout: post
 |-|
 |\$6,500 (\$7,500 for individuals $\gt$ 50 yr) from \$6,000 (\$7,000 for individuals $\gt$ 50 yr)**|
 
----
+<br>
 
-- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased: **-->** $\gt$ \$22.5 K (\$30 K, if $\gt$ \$50 yr), also for most 457 plans
+- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased: **-->** $\gt$ \$22.5 K (\$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="button2()">Open: irs-pubs</button> 
 
 - Insurance premiums for retired public safety officers: can now exclude **\$3 K** from income
 
@@ -92,15 +97,15 @@ layout: post
 
 - Temp. allowance of 100% business meal deduction: **Expired**, section 210.
 
-- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B  
+- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B   <button onclick="button2()">Open: irs-pubs</button> 
 
-- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B
+- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  <button onclick="button2()">Open: irs-pubs</button> 
 
 - **??   Certain corrective distributions not subject to 10% early distribution tax. Beginning with distributions made on 12/29/2022, and after, the 10% additional tax on early distributions will not apply to the income attributed to a corrective IRA distribution, as long as the corrective distribution is made on or before the due date (including extensions) of the income tax return.**
 
 - The IRS cannot issue refunds before mid-February 2024 for returns that claim Additional child tax credit (ACTC).
 
----
+<br>
 
 - Standard mileage rates
 
@@ -108,13 +113,13 @@ layout: post
 |-|-|-|
 |65.5 cents|14 cents|22 cents|
 
----
+<br>
 
 - ????? `Modified adjusted gross income` (mAGI) limit for traditional IRA contributions. If you are covered by a retirement plan at work, your **?????? eduction** for contributions to a traditional IRA is **reduced/phased out** if the modified AGI is:
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-|$\gt$ \$116,000 and $\lt$ \$136,000|$\gt$ \$73,000 and $\lt$ \$83,000|$\lt$ \$10,000|
+| $\gt$ \$116,000 and $\lt$ \$136,000 | $\gt$ \$73,000 and $\lt$ \$83,000 | $\lt$ \$10,000 |
 
 - **IF**
   1. you live with your spouse **or** 
@@ -127,25 +132,30 @@ layout: post
   - **Then NO IRA deduction**
   - See **????? How Much Can You Deduct in chapter 9**
 
----
+<br>
 
 - Roth IRA contributions, RE: Modified AGI limit for The Roth IRA contribution limit is reduced (phased out) in the following situations.
+  
   1. Your filing status is married filing jointly or qualifying surviving spouse and your modified AGI is $\geq$ \$218K. You can't make a Roth IRA contribution if your modified AGI $\geq$ \$228K.
+  
   2. Your filing status is single, head of household, or married filing separately and you didn't live with your spouse at any time in 2023 and your modified AGI is $\geq$  \$138K. You can't make a Roth IRA contribution if your modified AGI is $\geq$ \$153K.
+  
   3. Your filing status is married filing separately, you lived with your spouse at any time during the year, and your modified AGI is more than zero. You can't make a Roth IRA contribution if your modified AGI is $\geq$ $10K. See Can You Contribute to a Roth IRA in chapter 9, later.  
+
 <br>
+
 - 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150 (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
 
----
+<br>
 
 - **1099-K**: 1099-K is issued by third parties (like Uber, Lyft, Etsy, etc) to report payment transactions made to you for goods and services. You must report all income on your tax return unless excluded by law, whether you received the income electronically or not, and whether you received a Form 1099-K or not. The **box 1a** and other amounts reported on Form 1099-K are additional pieces of information to help determine the correct amounts to report on your return.
 
   - If you received a Form 1099-K that shows payments you didn’t receive or is otherwise incorrect, **contact the Form 1099-K issuer**, not the IRS. 
   - If you can’t get it corrected, or you sold a personal item at a loss, see the instructions for **Schedule 1, lines 8z and 24z**, see reporting information & `www.irs.gov/1099k`.
 
----
+<br>
 
-## 1.2 Do I Have To File A Return?
+- **Do I Have To File A Return?**
 
 |Who must file|
 |:-:|
@@ -161,7 +171,7 @@ layout: post
 2. Filing status
 3. Age
 
----
+<br>
 
 - FREE Filing Programs (or low-cost), if adjusted gross income (AGI) is < ~64K
 
@@ -176,7 +186,7 @@ layout: post
 |7|           TaxAct|20 <= age <= 58|          <= 45k|All states|Some|
 |8|  ezTaxReturn.com|            Any|          <= 79k|Some states|No|
 
----
+<br>
 
 - Access your online account: `www.irs.gov/account`
   1. View address(es), manage communications
@@ -185,36 +195,36 @@ layout: post
   1. Approve or reject authorization requests from tax professionals
   1. `www.irs.gov/secureaccess` for identity authentication process.
 
----
+<br>
 
-- Change of address: Form 8822
+- Change of address: Form 8822  <button onclick="button2()">Open: irs-pubs</button> 
 
 - ONE NEEDS: SSN, ITIN, ATIN
 
----
+<br>
 
-##### 1.2.7 Installment agreement
+- 1.2.7 Installment agreement
 
 - See Install agreement section?
 
-- Automatic 6-month extension: Form 4868
+- Automatic 6-month extension: Form 4868  <button onclick="button2()">Open: irs-pubs</button> 
 
-##### 1.2.9 Service in combat zone
+- 1.2.9 Service in combat zone
 
 - Allowed extra time, See section?
 
-##### 1.2.10 Adoption taxpayer identification number
+- 1.2.10 Adoption taxpayer identification number
 
 - See section?
 
-##### 1.2.11 Taxpayer identification number for aliens
+- 1.2.11 Taxpayer identification number for aliens
 
----
+<br>
 
-- Doesn't have & isn't eligible to get a social security number, **Use/file Form W-7**
+- Doesn't have & isn't eligible to get a social security number, **Use/file Form W-7**  <button onclick="button2()">Open: irs-pubs</button> 
   - `www.irs.gov/itin`: Individual taxpayer identification number (ITIN) renewal
 
----
+<br>
 
 - Frivolous tax submissions
   1. The IRS has published a lists of frivolous positions. WHERE?
@@ -235,13 +245,13 @@ layout: post
 - Community property states: 
   1. Form 8958, *Allocation of Tax Amounts Between Certain Individuals in Community Property States*
   1. Pub. 555, *Community Property*
-  1. Schedule F-Form 1040
+  1. Schedule F-Form 1040  <button onclick="button2()">Open: irs-pubs</button> 
   1. Include Arizona, California,Idaho, Louisiana, Nevada, New Mexico, Texas, Washington & Wisconsin
 
 <br>
 
 - Self-employed individuals
-  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9
+  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9  <button onclick="button2()">Open: irs-pubs</button> 
 
 <br>
 
@@ -252,13 +262,13 @@ layout: post
 <br>
 
 - U.S. Citizens & Resident Aliens Living Abroad:
-  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*
+  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*  <button onclick="button2()">Open: irs-pubs</button> 
   1. See Tables 1-1,2,3
 
 <br>
 
 - Residents of Puerto Rico, Guam, The Northern Mariana Islands, American Samoa, or the U.S. Virgin Islands
-  1. Pub. 570,
+  1. Pub. 570  <button onclick="button2()">Open: irs-pubs</button> 
   1. See Table 1-1,3
 
 |MAKE LINKS|
@@ -268,7 +278,7 @@ layout: post
 
 <br>
 
-#### **DEPENDENTS**
+- **DEPENDENTS**
 
 - Responsibility of parent
   1. Generally, children ARE responsible for filing & paying
@@ -282,14 +292,14 @@ layout: post
 <br>
 
 - Children < 19yr or FT Students: 
-  1. Form 8814
+  1. Form 8814 <button onclick="button2()">Open: irs-pubs</button> 
   1. If a child's only income is *interest & dividends* & child $\leq$ 19 or full-time student $\leq$ 24, parent can include the child's income on the parent's return.
   1. The child can choose to lump income together:
-      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*
+      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*  <button onclick="button2()">Open: irs-pubs</button> 
 
 <br>
 
-- Self-Employed: *Pub. 334, Tax Guide for Small Business (Schedule C)*
+- Self-Employed: *Pub. 334, Tax Guide for Small Business (Schedule C)*  <button onclick="button2()">Open: irs-pubs</button> 
 
 <br>
 
@@ -307,20 +317,20 @@ layout: post
 
 <br>
 
-- Ministers: Pub. 517, Like Self-employed
+- Ministers: Pub. 517, Like Self-employed  <button onclick="button2()">Open: irs-pubs</button> 
 
----
+<br>
 
-- Aliens: Pub. 519, *Tax Guide for Aliens*, 
+- Aliens: Pub. 519, *Tax Guide for Aliens*  <button onclick="button2()">Open: irs-pubs</button> 
   - See also 1040-NR, Nonresident Alien Income Tax Return
 
 |Resident alien|Nonresident alien|Dual-status taxpayer|
 |-|-|-|
 |Same rules as US citizens|Some rules like US citizens, min. exceptions|Different rules based on % in country|
 
----
+<br>
 
-### 1.9 Who Should File: See Pub. 596, 970, 974
+- 1.9 Who Should File: See Pub. 596, 970, 974  <button onclick="button2()">Open: irs-pubs</button> 
 
 - Even if you don't have to file, you should to get your money back if:
 - Had tax W/H or Est. your tax or any tax credit
@@ -328,13 +338,13 @@ layout: post
 - For Premium tax credit, Use Pub. 974
 - For American opportunity credit, Use Pub. 970
 
----
+<br>
 
 - Three basic Filings: *1040 & 1040-SR & 1040-NR* 
   - SR = for seniors, 
   - NR = Non-residents
 
----
+<br>
 
 - Requirements for an Electronic filing & returns
   - See: Table 1-2 for Requirements
@@ -343,7 +353,7 @@ layout: post
   - 1.12 Self-Select PIN
 
   - 1.13 Practitioner PIN
-  - 1.14 Form 8453
+  - 1.14 Form 8453  <button onclick="button2()">Open: irs-pubs</button> 
 
   - 1.15 Identity Protection PIN
 
@@ -365,7 +375,7 @@ layout: post
 
   - 1.24 Using a Tax Professional
 
-### 1.5 When Do I Have To File?
+- 1.5 When Do I Have To File?
 
   - Filing paper returns on time
 
@@ -375,11 +385,11 @@ layout: post
 
   - Filing late
 
-#### Filing for a decedent
+- Filing for a decedent
 
-#### Extensions of Time To File
+- Extensions of Time To File
 
-#####Automatic Extension
+- Automatic Extension
 
 E-file options.
 
@@ -389,13 +399,13 @@ E-file & pay by credit or debit card or by direct transfer from your bank accoun
 
 Filing a paper Form 4868
 
-### 1.6 When Do I Have To File?
+- 1.6 When Do I Have To File?
 
-### 1.7 Where Do I File?
+- 1.7 Where Do I File?
 
-### 1.8 What Happens After I File?
+- 1.8 What Happens After I File?
 
-### 1.9 What If I Made A Mistake?
+- 1.9 What If I Made A Mistake?
 
 
 
@@ -472,9 +482,8 @@ Filing a paper Form 4868
 
 ## APPENDIX: Publications & Forms Mentioned
 
- <script> function buttonFunc() { window.open("https://www.irs.gov/forms-instructions"); } </script>
-<button onclick="buttonFunc()">Link to Forms</button>
-
+ <button onclick="button2()">Open: irs-pubs</button> 
+ 
 - **Pub. 505** - Tax W/H & Estimated Tax
 - **Pub. 501** - Dependents, Standard Deduction
 - **Pub. 531** - Tip Income
