fixed buttons on pub 17

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -4,7 +4,7 @@ date: 2024-08-24, started
 layout: post
 ---
 
-function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
+<script>function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }</script>
 
 > W/H = Withholding  
 > SS = Social security  
@@ -17,7 +17,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 1. What records to keep and how long, How to amend filings 
 1. Pub. 17 closely follows Form 1040
 
-- **Not in this publication**  <button onclick="button2()">Open: irs-pubs</button> 
+- **Not in this publication**  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 1. Pub. 334, Tax Guide for Small Business
 2. Pub. 225, Farmer's Tax Guide
@@ -32,7 +32,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 <br>
 
 <script> function button10() { window.open("/irs.ea/assets/pdfs/i8936.pdf"); } </script>
-1. Clean vehicle credit (New): Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="button2()">Open: irs-pubs</button> 
+1. Clean vehicle credit (New): Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 2. Previously owned clean vehicle credit: credit is available for previously owned clean vehicles, Use Form 8936
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
 
@@ -54,7 +54,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- **Schedule 3-1040 Add'ns**  <button onclick="button2()">Open: irs-pubs</button> 
+- **Schedule 3-1040 Add'ns**  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 - Line 5a **-->** Residential clean energy credit: Form 5695
 - Line 5b **-->** Energy efficient home improvement credit: Form 5695
 - Line 6m **-->** Credit for previously owned clean vehicles: Form 8936
@@ -67,12 +67,12 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 - Alternative motor vehicle credit **-->** Expired
 
-- Self-employed health insurance deduction:  <button onclick="button2()">Open: irs-pubs</button> 
+- Self-employed health insurance deduction:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   - Use Form 7206, report on 1040 Schedule 1, line 17
 
 - 1X Charitable distribution: 2023 **-->** distribute < \$50K from IRA
 
-- Increase required minimum distribution age **-->** 72yr  <button onclick="button2()">Open: irs-pubs</button> 
+- Increase required minimum distribution age **-->** 72yr  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   - Use Pub. 590–B
 
 <br>
@@ -85,7 +85,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased: **-->** $\gt$ \$22.5 K (\$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="button2()">Open: irs-pubs</button> 
+- Deferred compensation contribution (401(k), 403(b),fed gov Thrift Savings Plan) increased: **-->** $\gt$ \$22.5 K (\$30 K, if $\gt$ \$50 yr), also for most 457 plans  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - Insurance premiums for retired public safety officers: can now exclude **\$3 K** from income
 
@@ -97,9 +97,9 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 - Temp. allowance of 100% business meal deduction: **Expired**, section 210.
 
-- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B   <button onclick="button2()">Open: irs-pubs</button> 
+- Diaster tax relief - See Disaster-Related Relief in Pub. 590-B   <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
-- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  <button onclick="button2()">Open: irs-pubs</button> 
+- Distributions to terminally ill individuals. The exception to the 10% additional tax for early distributions is expanded to distributions made after 12/29/2022, to a certified individual. See Pub. 590-B  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - **??   Certain corrective distributions not subject to 10% early distribution tax. Beginning with distributions made on 12/29/2022, and after, the 10% additional tax on early distributions will not apply to the income attributed to a corrective IRA distribution, as long as the corrective distribution is made on or before the due date (including extensions) of the income tax return.**
 
@@ -197,7 +197,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- Change of address: Form 8822  <button onclick="button2()">Open: irs-pubs</button> 
+- Change of address: Form 8822  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - ONE NEEDS: SSN, ITIN, ATIN
 
@@ -207,7 +207,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 - See Install agreement section?
 
-- Automatic 6-month extension: Form 4868  <button onclick="button2()">Open: irs-pubs</button> 
+- Automatic 6-month extension: Form 4868  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - 1.2.9 Service in combat zone
 
@@ -221,7 +221,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- Doesn't have & isn't eligible to get a social security number, **Use/file Form W-7**  <button onclick="button2()">Open: irs-pubs</button> 
+- Doesn't have & isn't eligible to get a social security number, **Use/file Form W-7**  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   - `www.irs.gov/itin`: Individual taxpayer identification number (ITIN) renewal
 
 <br>
@@ -245,13 +245,13 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 - Community property states: 
   1. Form 8958, *Allocation of Tax Amounts Between Certain Individuals in Community Property States*
   1. Pub. 555, *Community Property*
-  1. Schedule F-Form 1040  <button onclick="button2()">Open: irs-pubs</button> 
+  1. Schedule F-Form 1040  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   1. Include Arizona, California,Idaho, Louisiana, Nevada, New Mexico, Texas, Washington & Wisconsin
 
 <br>
 
 - Self-employed individuals
-  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9  <button onclick="button2()">Open: irs-pubs</button> 
+  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 <br>
 
@@ -262,13 +262,13 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 <br>
 
 - U.S. Citizens & Resident Aliens Living Abroad:
-  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*  <button onclick="button2()">Open: irs-pubs</button> 
+  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   1. See Tables 1-1,2,3
 
 <br>
 
 - Residents of Puerto Rico, Guam, The Northern Mariana Islands, American Samoa, or the U.S. Virgin Islands
-  1. Pub. 570  <button onclick="button2()">Open: irs-pubs</button> 
+  1. Pub. 570  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   1. See Table 1-1,3
 
 |MAKE LINKS|
@@ -292,14 +292,14 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 <br>
 
 - Children < 19yr or FT Students: 
-  1. Form 8814 <button onclick="button2()">Open: irs-pubs</button> 
+  1. Form 8814 <button onclick="buttonPubs()">Open: irs-pubs</button> 
   1. If a child's only income is *interest & dividends* & child $\leq$ 19 or full-time student $\leq$ 24, parent can include the child's income on the parent's return.
   1. The child can choose to lump income together:
-      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*  <button onclick="button2()">Open: irs-pubs</button> 
+      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 <br>
 
-- Self-Employed: *Pub. 334, Tax Guide for Small Business (Schedule C)*  <button onclick="button2()">Open: irs-pubs</button> 
+- Self-Employed: *Pub. 334, Tax Guide for Small Business (Schedule C)*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 <br>
 
@@ -317,11 +317,11 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- Ministers: Pub. 517, Like Self-employed  <button onclick="button2()">Open: irs-pubs</button> 
+- Ministers: Pub. 517, Like Self-employed  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 <br>
 
-- Aliens: Pub. 519, *Tax Guide for Aliens*  <button onclick="button2()">Open: irs-pubs</button> 
+- Aliens: Pub. 519, *Tax Guide for Aliens*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
   - See also 1040-NR, Nonresident Alien Income Tax Return
 
 |Resident alien|Nonresident alien|Dual-status taxpayer|
@@ -330,7 +330,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
 
 <br>
 
-- 1.9 Who Should File: See Pub. 596, 970, 974  <button onclick="button2()">Open: irs-pubs</button> 
+- 1.9 Who Should File: See Pub. 596, 970, 974  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
 - Even if you don't have to file, you should to get your money back if:
 - Had tax W/H or Est. your tax or any tax credit
@@ -353,7 +353,7 @@ function buttonPubs() { window.open("https://www.irs.gov/forms-pubs"); }
   - 1.12 Self-Select PIN
 
   - 1.13 Practitioner PIN
-  - 1.14 Form 8453  <button onclick="button2()">Open: irs-pubs</button> 
+  - 1.14 Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
   - 1.15 Identity Protection PIN
 
@@ -482,7 +482,7 @@ Filing a paper Form 4868
 
 ## APPENDIX: Publications & Forms Mentioned
 
- <button onclick="button2()">Open: irs-pubs</button> 
+ <button onclick="buttonPubs()">Open: irs-pubs</button> 
  
 - **Pub. 505** - Tax W/H & Estimated Tax
 - **Pub. 501** - Dependents, Standard Deduction
