--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -241,16 +241,16 @@ layout: post
 
 <br>
 
-- Community property states: 
+- Community property states: <button onclick="buttonPubs()">Open: irs-pubs</button>  
   1. Form 8958, *Allocation of Tax Amounts Between Certain Individuals in Community Property States*
   1. Pub. 555, *Community Property*
-  1. Schedule F-Form 1040  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  1. Schedule F-Form 1040  
   1. Include Arizona, California,Idaho, Louisiana, Nevada, New Mexico, Texas, Washington & Wisconsin
 
 <br>
 
-- Self-employed individuals
-  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Self-employed individuals: <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  1. SEE: line 7 of Schedule C (Form 1040) Profit or Loss From Business & line 9 
 
 <br>
 
@@ -260,8 +260,8 @@ layout: post
 
 <br>
 
-- U.S. Citizens & Resident Aliens Living Abroad:
-  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- U.S. Citizens & Resident Aliens Living Abroad:  <button onclick="buttonPubs()">Open: irs-pubs</button>  
+  1. Pub. 54, *Tax Guide for U.S. Citizens and Resident Aliens Abroad*  
   1. See Tables 1-1,2,3
 
 <br>
@@ -290,11 +290,11 @@ layout: post
 
 <br>
 
-- Children < 19yr or FT Students: 
-  1. Form 8814 <button onclick="buttonPubs()">Open: irs-pubs</button> 
+- Children < 19yr or FT Students: <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  1. Form 8814   
   1. If a child's only income is *interest & dividends* & child $\leq$ 19 or full-time student $\leq$ 24, parent can include the child's income on the parent's return.
   1. The child can choose to lump income together:
-      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+      1. See: i8814, *Parents Election To Report Child’s Interest & Dividends*  
 
 <br>
 
@@ -330,12 +330,11 @@ layout: post
 <br>
 
 - 1.9 Who Should File: See Pub. 596, 970, 974  <button onclick="buttonPubs()">Open: irs-pubs</button> 
-
-- Even if you don't have to file, you should to get your money back if:
-- Had tax W/H or Est. your tax or any tax credit
-- To Qualify for Earned income credit, Use Pub. 596
-- For Premium tax credit, Use Pub. 974
-- For American opportunity credit, Use Pub. 970
+  - Even if you don't have to file, you should to get your money back if:
+  - Had tax W/H or Est. your tax or any tax credit
+  - To Qualify for Earned income credit, Use Pub. 596
+  - For Premium tax credit, Use Pub. 974
+  - For American opportunity credit, Use Pub. 970
 
 <br>
 
