--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -120,7 +120,7 @@ layout: post
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-| $\gt$ \$116,000 and $\lt$ \$136,000 | $\gt$ \$73,000 and $\lt$ \$83,000 | $\lt$ \$10,000 |
+| $\leq$ \$116,000 and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
 
 - **IF**
   1. you live with your spouse **or** 
@@ -137,15 +137,15 @@ layout: post
 
 - Roth IRA contributions, RE: Modified AGI limit for The Roth IRA contribution limit is reduced (phased out) in the following situations.
   
-  1. Your filing status is married filing jointly or qualifying surviving spouse and your modified AGI is $\geq$ \$218K. You can't make a Roth IRA contribution if your modified AGI $\geq$ \$228K.
+  1. Your filing status is married filing jointly or qualifying surviving spouse and your modified AGI is $\geq$ \$218K. You can't make a Roth IRA contribution if your modified AGI $\geq$ \$228K$.
   
-  2. Your filing status is single, head of household, or married filing separately and you didn't live with your spouse at any time in 2023 and your modified AGI is $\geq$  \$138K. You can't make a Roth IRA contribution if your modified AGI is $\geq$ \$153K.
+  2. Your filing status is single, head of household, or married filing separately and you didn't live with your spouse at any time in 2023 and your modified AGI is $\geq$  \$138K. You can't make a Roth IRA contribution if your modified AGI is $\geq$ \$153K$.
   
   3. Your filing status is married filing separately, you lived with your spouse at any time during the year, and your modified AGI is more than zero. You can't make a Roth IRA contribution if your modified AGI is $\geq$ $10K. See Can You Contribute to a Roth IRA in chapter 9, later.  
 
 <hr>
 
-- 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150 (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
+- 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150$ (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
 
 <hr>
 
