changed $ on magi married jointly

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -31,8 +31,11 @@ layout: post
 
 <hr class="red">
 
-1. Clean vehicle credit (New): Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
-2. Previously owned clean vehicle credit: credit is available for previously owned clean vehicles, Use Form 8936
+1. Clean vehicle credit (New): 
+  - Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+2. Previously owned clean vehicle credit: 
+  - Use Form 8936, credit is available for previously owned clean vehicles, 
+
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
 
 <hr class="red">
@@ -92,7 +95,7 @@ layout: post
 
 - ????Exception to the 10% additional tax for early distributions????
 
-- Use: www.irs.gov/directfile
+- Use: `www.irs.gov/directfile`
 
 - Health Flexible Spending Act (HFSA) under cafeteria plans = \$3,050, under section 125(i) on voluntary salary redux.
 
@@ -120,7 +123,7 @@ layout: post
 
 |Married filing jointly,<br>Qualifying surviving spouse|Single,<br>Head of household|Married filing separately
 |-|-|-|
-| $\leq$ \$116,000 and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
+| $\leq$ \$116,000$ and $\leq$ \$136,000$ | $\leq$ \$73,000 and $\leq$ \$83,000 | $\leq$ \$10,000 |
 
 - **IF**
   1. you live with your spouse **or** 
