--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -161,11 +161,23 @@ layout: post
 
 - **Do I Have To File A Return?**
 
+#### Table 1.1
 |Who must file|
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
+
+#### Table 1.2
+|Who must file|
+|:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
+|YES:<br>UN-earned income $\geq$ 1,250 (For interest, dividends, cap. gains, IRA distribtuions)<br>Earned income $\geq$ \$13,850|
+
+
+#### Table 1.3
+|Who must file|
+|:-:|
 |![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
+
 
 > **NOTE**: US and Puerto Rican residents must file even if you don't owe tax.  
 {: .block-tip }
@@ -348,9 +360,6 @@ layout: post
   - NR = Non-residents
 
 <hr class="red">
-
-- Requirements for an Electronic filing & returns
-  - See: Table 1-2 for Requirements
 
 
   - 1.12 Self-Select PIN
