--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -161,19 +161,22 @@ layout: post
 
 - **Do I Have To File A Return?**
 
-#### Table 1.1
+### Table 1.1
+
 |Who must file|
 |:-:|
 |![Table 1-1](/irs.ea/assets/images/images.pub.17/table.1.1.png)|
 
-#### Table 1.2
+### Table 1.2
+
 |Who must file|
 |:-:|
 |![Table 1-2](/irs.ea/assets/images/images.pub.17/table.1.2.png)|
 |YES:<br>UN-earned income $\geq$ 1,250 (For interest, dividends, cap. gains, IRA distribtuions)<br>Earned income $\geq$ \$13,850|
 
 
-#### Table 1.3
+### Table 1.3
+
 |Who must file|
 |:-:|
 |![Table 1-3](/irs.ea/assets/images/images.pub.17/table.1.3.png)|
