--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -48,7 +48,7 @@ layout: post
 
 <hr class="red">
 
-- Std Deductions for 2023:  
+- Standard Deductions for 2023:  
 
 |Single,<br>Married filing separately |Married filing jointly,<br>Qualifying surviving spouse |Head of household |
 |-|-|-|
@@ -148,7 +148,7 @@ layout: post
 
 <hr class="red">
 
-- 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150$ (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
+- 2024 modified AGI limits. You can find information about the 2024 contribution and modified AGI limits in Pub. 590-A. Tax law changes for 2024. When you figure how much income tax you want withheld from your pay and when you figure your estimated tax, consider tax law changes effective in 2024. For more information, see Pub. 505. Alternative minimum tax (AMT) exemption amount increased. The AMT exemption amount is increased to \$81,300 (\$126,500 if married filing jointly or qualifying surviving spouse; \$63,250 if married filing separately). The income levels at which the AMT exemption begins to phase out have increased to \$578,150 (\$1,156,300 if married filing jointly or qualifying surviving spouse).  
 
 <hr class="red">
 
