Added POA, VITA, TCE info

--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -21,7 +21,13 @@ layout: post
 
 1. Pub. 334, Tax Guide for Small Business
 2. Pub. 225, Farmer's Tax Guide
-3. Pub. 587, Business Use of Your Home
+3. Pub. 587, Bus
+
+> For IRS Video Information:  
+> [IRS YouTube](https://www.youtube.com/@irsvideos)  
+{: .block-tip }  
+
+<hr class="red">
 
 # Chapter 1. Filing Information
 
@@ -34,7 +40,8 @@ layout: post
 1. Clean vehicle credit (New): 
   - Use Form 8936 & and Schedule A (Form 8936) & 1040-Schedule 3, line 6f:  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 2. Previously owned clean vehicle credit: 
-  - Use Form 8936, credit is available for previously owned clean vehicles, 
+  - Use Form 8936, credit is available for previously owned clean vehicles
+3. See [IRS Video, 1 hr](https://www.youtube.com/watch?v=DtYufJmdm1A)
 
 > "The credit is lesser of $4,000 or 30% of the sales price of the previously owned clean vehicle you acquired and placed into service that year."
 
@@ -208,9 +215,10 @@ layout: post
 <hr class="red">
 
 - Access your online account: `www.irs.gov/account`
+  1. [IRS web info](https://www.irs.gov/payments/online-account-for-individuals)
   1. View address(es), manage communications
   1. Make payments. See & set up payment plans, payment history
-  1. Access tax records (key data!), transcripts, digital copies
+  1. Access tax records = transcripts
   1. Approve or reject authorization requests from tax professionals
   1. `www.irs.gov/secureaccess` for identity authentication process.
 
@@ -365,28 +373,40 @@ layout: post
 <hr class="red">
 
 
-  - 1.12 Self-Select PIN
+  - Self-Select PIN, See:
+    - 
 
-  - 1.13 Practitioner PIN
-  - 1.14 Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  - Practitioner PIN
+    - allows one to authorize your tax practitioner to enter or generate your PIN. Your electronic return is considered a valid only when it **includes your PIN; last name; date of birth; and IP PIN**
+    - If filing jointly one needs ALL Spouse info.
 
-  - 1.15 Identity Protection PIN
 
-  - 1.16 Power of attorney
+  - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button> 
 
-  - 1.17 State returns
+  - Identity Protection PIN, See:  
+    - [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
+    - [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams/get-an-identity-protection-pin)  
+    - [IP PIN TOOL](https://www.irs.gov/ippin)
 
-  - 1.18 Refunds
+  - Power of attorney (POA)
+    - Attach form 8453
 
-  - 1.19 Refund inquiries
 
-  - 1.20 Amount you owe
+  - Refunds, See:
+    - Offset against debts (page 15)
+    - For inquiries: use App
 
-  - 1.21 Using Your Personal Computer
 
-  - 1.22 Through Employers & Financial Institutions
+<script> function buttonvita() { window.open("www.IRS.gov/VITA"); } </script>
+<script> function buttontec() { window.open("www.IRS.govTCE"); } </script>
 
-  - 1.23 Free Help With Your Return
+  - Free Help With Your Return
+    - **Volunteer Income Tax Assistance, VITA** <button onclick="buttonvita()">See: VITA Info</button>
+    - IRS.gov/VITA, 
+    - download the *free IRS2Go app, 
+    - call *800-906-9887* to find the nearest VITA location
+    - **Tax Counseling for the Elderly, TCE** <button onclick="buttonvtec()">See: TCE Info</button>
+    - IRS.gov/TCE, *etc*. to find the nearest TCE location 
 
   - 1.24 Using a Tax Professional
 
