--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -381,20 +381,22 @@ layout: post
     - If filing jointly one needs ALL Spouse info.
 
 
-  - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button> 
+  - Form 8453  <button onclick="buttonPubs()">Open: irs-pubs</button>
 
-  - Identity Protection PIN, See:  
-    - [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
-    - [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams/get-an-identity-protection-pin)  
-    - [IP PIN TOOL](https://www.irs.gov/ippin)
+- Identity Protection PIN, See:  
+  - See: Publication 5477, All taxpayers now eligible for Identity Protection PINs  
+  - [IP-PIN video](https://www.youtube.com/watch?v=YhfSZuwGrlY)  
+  - [How to get IP-PIN](https://www.irs.gov/identity-theft-fraud-scams get-an-identity-protection-pin)  
+  - [IP PIN TOOL](https://www.irs.gov/ippin)
 
-  - Power of attorney (POA)
-    - Attach form 8453
+- Power of attorney (POA)
+  - Attach Form **8453**
 
+- Refunds, See:
+  - Offset against debts - The IRS may take all or part of your refund to past-due amounts
+  - For inquiries:  Use App
 
-  - Refunds, See:
-    - Offset against debts (page 15)
-    - For inquiries: use App
+- Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.
 
 
 <script> function buttonvita() { window.open("www.IRS.gov/VITA"); } </script>
@@ -419,12 +421,14 @@ layout: post
   - Filing electronic returns on time
 
   - Filing late
+    - See Penalities and Interest
 
 - Filing for a decedent
 
-- Extensions of Time To File
+- Extensions of Time To File, Automatic Extension
+  - **Form 4868**, Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
 
-- Automatic Extension
+- 
 
 E-file options.
 
