--- a/_pages/001-pub17.tax.guide.md
+++ b/_pages/001-pub17.tax.guide.md
@@ -412,23 +412,26 @@ layout: post
 
   - 1.24 Using a Tax Professional
 
-- 1.5 When Do I Have To File?
+## When Do I File?
 
-  - Filing paper returns on time
+|When To File|
+|:-:|
+|![Table 1.5](/assets/images/images.pub.17/table.1.5.png)|
 
-  - Private delivery services
-
-  - Filing electronic returns on time
-
-  - Filing late
-    - See Penalities and Interest
+- Filing late
+  - Penalities and Interest - Interest is charged from the due date of your return, even if you get an extension.  Penalities (failure-to-file penalty) is ~5% for each month or part of a month that it is late, but not more 25%.
 
 - Filing for a decedent
+  - See **Pub. 559**: Survivors, Executors and Administrators 
 
 - Extensions of Time To File, Automatic Extension
-  - **Form 4868**, Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
+  - **Form 4868**: Application for Automatic Extension of Time to File U.S. Individual Income Tax Return  
+  - **Extensions $\geq$ 2 month, Use:6 months**
 
-- 
+
+- For Non-resident alien
+  - If you earned in the US, then 4/15 
+  - If you don't earn wages subject to W/H, then 6/15. **????**
 
 E-file options.
 
